--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p>The Export Data button will download a file that contains all your thankfulness. &#128591</p>
                 <p>The Import Data button will add data from a file into the list <b>IT WILL ALSO OVERWRITE YOUR DATA SO BE CAREFUL!</b></p>
                 <p><b>IMPORTANT: IF YOU CLEAR YOUR BROWSER CACHE IT WILL CLEAR THE DATA FOR THIS WEBSITE!! MAKE REGULAR BACKUPS WITH THE EXPORT DATA BUTTON!!</b></p>
-                <p>Thats it, enjoy</p>
+                <p>That's it, enjoy</p>
                 <p><i>Created by Greyson Rowland</i> :)</p>
                 <button onclick="this.parentNode.remove()">Continue</button>
             </div>
